--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vocallens",
   "version": "0.1.0",
+  "homepage": "/vocallens",
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
